[FIX] #62797 - Initiator/Regarding category, new requirements

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/EditUserCategory.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/EditUserCategory.cshtml
@@ -40,7 +40,7 @@
             },
             messages: {
                 Name: {
-                    required: 'Name is required'
+                    required: '@Translation.GetCoreTextTranslation("Namn") @Translation.GetCoreTextTranslation("måste anges")'
                 }
             },
             submitHandler: function(form) {
