--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
@@ -7,8 +7,10 @@
             <div class="float-right">
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">                  
                     <label *ngFor="let lang of translate.getLangs()" class="btn btn-secondary">
-                        <input type="radio" name="lang_{{lang}}" (click)="switchLanguage(lang)" [(ngModel)]="lang == translate.currentLang" autocomplete="off" [value]="lang"> {{lang}}
-                    </label>                  
+                        <input type="radio" name="lang_{{lang}}" autocomplete="off" 
+                            (change)="switchLanguage(lang)" 
+                            [checked]="lang == translate.currentLang" [value]="lang"> {{ getDisplayName(lang) }}
+                    </label>
                 </div>
             </div>              
           </div>          
@@ -19,7 +21,7 @@
 
     <div class="jumbotron text-center">
             <h1 translate>Title</h1>
-            <p>{{'Welcome' | translate: getCurrentUser()}}</p>
+            <p>{{'Welcome' | translate: getCurrentUser() }}</p>
     </div>
 
     <div class="row">
