--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/main/components/home/home.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/main/components/home/home.component.html
@@ -1,2 +1,3 @@
-<h3>Home page</h3>
-<p>Welcome to Home page</p>
+<h1>Home</h1>
+<p>You're logged</p>
+<p><a [routerLink]="['/login']">Logout</a></p>
