Updated project structure / changed scripts to scss / added web.config for routing under iis

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-.mbsc-btn {
+@import '../../../node_modules/@mobiscroll/angular/dist/css/mobiscroll.min.css';
+
+/*.mbsc-ios .mbsc-btn {
     background-color: #d96326
-}
+}*/
