[FIX] #63539 Working group on Case Type - administration Case type

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CaseType/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CaseType/Index.cshtml
@@ -37,6 +37,9 @@
                                 @Translation.GetCoreTextTranslation("Kräver godkännande")
                             </th>
                             <th>
+                                @Translation.GetCoreTextTranslation("Driftgrupp")
+                            </th>
+                            <th>
                                 @Translation.GetCoreTextTranslation("Handläggare")
                             </th>
                             <th>
