--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
@@ -1,7 +1,3 @@
-  <div>
-    <router-outlet></router-outlet>
-  </div>
-
-
-
-
+<mbsc-page [options]="pageSettings">
+  <router-outlet></router-outlet>
+</mbsc-page>
