[FIX]#63841 - Initiator - add new

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/NotifierEdit/GeneralFields.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/NotifierEdit/GeneralFields.cshtml
@@ -17,7 +17,7 @@
                     <tr>
                         <td>@Translation.GetCoreTextTranslation("Kategori")</td>
                         <td>
-                            @Html.DropDownList("CategoryId", Model.ComputerUserCategoryModel.ComputerUserCategories, "",
+                            @Html.DropDownList("CategoryId", Model.ComputerUserCategoryModel.ComputerUserCategories, 
                                 @Model.ComputerUserCategoryModel.IsReadOnly
                                     ? (object)new { id = "category_dropdown", disabled = "disabled" } 
                                     : (object)new { id = "category_dropdown" })
