[FIX]#63842 - Initator category in case - blank category

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -271,7 +271,7 @@
                                                     <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id, "Anmälarkategori")</td>
                                                     <td>
                                                         @Html.ReadonlyDropDownListFor(x => x.InitiatorCategoryId,
-                                                            Model.BuildComputerCategoriesSelectList(Model.InitiatorCategoryId), null,
+                                                            Model.BuildComputerCategoriesSelectList(Model.InitiatorCategoryId, true), null,
                                                             Model.IsReadOnly(GlobalEnums.TranslationCaseFields.UserSearchCategory_Id, CaseSolutionFields.UserSearchCategory_Id),
                                                             "InitiatorCategory")
                                                     </td>
@@ -610,7 +610,7 @@
                                                 <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id, "Anmälarkategori")</td>
                                                 <td>
                                                     @Html.ReadonlyDropDownListFor(x => x.RegardingCategoryId,
-                                                             Model.BuildComputerCategoriesSelectList(Model.RegardingCategoryId), null,
+                                                             Model.BuildComputerCategoriesSelectList(Model.RegardingCategoryId, true), null,
                                                              Model.IsReadOnly(GlobalEnums.TranslationCaseFields.IsAbout_UserSearchCategory_Id, CaseSolutionFields.IsAbout_UserSearchCategory_Id), "IsAboutCategory")
                                                 </td>
                                             </tr>
