--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -314,9 +314,12 @@
                     {
                         @Html.HiddenFor(model => model.CaseSolution.CaseRelationType)
 
-                        for (int i = 0; i < Model.SplitToCaseSolutionIds.Count(); i++)
-                        {
-                            @Html.HiddenFor(model => model.SplitToCaseSolutionIds[i])
+                        if (Model.SplitToCaseSolutionIds != null)
+                        { 
+                            for (int i = 0; i < Model.SplitToCaseSolutionIds.Count(); i++)
+                            {
+                                @Html.HiddenFor(model => model.SplitToCaseSolutionIds[i])
+                            }
                         }
                     }
 
