--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/casesOverview/casesOverview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/casesOverview/casesOverview.component.html
@@ -6,15 +6,16 @@
         </form>
     </div>
 </mbsc-form>
-<mbsc-listview [options]="listviewSettings">
+<span class="md-btn-icon mbsc-ic mbsc-ic-loop2" [hidden]="!loading"></span><!-- TODO: change to more handsome loader -->  
+<mbsc-listview [options]="listviewSettings" [hidden]="loading">
         <mbsc-listview-item *ngFor="let case of cases">
-                {{case.Columns | getByKey: 'CaseNumber'}}
-                <div>Case Info 2</div>                
+                #{{case.Columns | getByKey: 'CaseNumber'}}
+                <div>{{case.Columns | getByKey: 'RegTime'}}</div> <!-- TODO: use ISO date instead of string and format -->               
         </mbsc-listview-item>
 </mbsc-listview>
 <div class="mbsc-form-group mbsc-btn-group-block">
         <mbsc-button color="primary" (click)="search()" [disabled]="loading">
-                <span class="md-btn-icon mbsc-ic mbsc-ic-loop2" [hidden]="!loading"></span>
+                <span class="md-btn-icon mbsc-ic mbsc-ic-loop2" [hidden]="!loading"></span><!-- TODO: change to more handsome loader --> 
                 <span class="md-btn-text" [hidden]="loading">Search</span>
         </mbsc-button>
 </div>
