--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CaseType/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CaseType/_Input.cshtml
@@ -167,6 +167,9 @@
                                         @Translation.GetCoreTextTranslation("Kräver godkännande")
                                     </th>
                                     <th>
+                                        @Translation.GetCoreTextTranslation("Driftgrupp")
+                                    </th>
+                                    <th>
                                         @Translation.GetCoreTextTranslation("Handläggare")
                                     </th>
                                     <th>
