[FIX] #64054 Wrong Tab-name for Self-Service

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/_Layout.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <meta content="html/text; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>@layoutModel.IsLineManager ? @Translation.Get("DH-Line Manager") :  @Translation.Get("DH-Self Service")</title>
+        <title>@(layoutModel.IsLineManager ? @Translation.Get("DH-Line Manager") : @Translation.Get("DH-Self Service"))</title>
 
         @Styles.Render(BundleConfig.StyleNames.Common)
         @Styles.Render("~/img-profile/css")
