--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
@@ -1,3 +1,7 @@
-<mbsc-page [options]="pageSettings">
+<mbsc-page [options]="pageSettings">  
+    <div *requireAuth>
+        <app-header></app-header>
+    </div>
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </mbsc-page>
