Adding case view (reaonly)

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
@@ -3,5 +3,5 @@
         <app-header></app-header>
     </div>
   <router-outlet></router-outlet>
-  <app-footer></app-footer>
+ <!--  <app-footer></app-footer> TODO: stick to bottom -->
 </mbsc-page>
