--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/header/page-header.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/header/page-header.component.html
@@ -9,6 +9,6 @@
         </mbsc-hamburger-nav>
     </div>
     <div class="md-hamb">
-        Current Customer Name
+        Datahalland
     </div>
 </div>
