--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.html
@@ -1,8 +1,13 @@
-<mbsc-form>
+<mbsc-form class="md-login-form">
     <form [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit()">
-        <mbsc-input formControlName="username" [error]="f.username.touched && f.username.dirty && f.username.invalid" [errorMessage]="getError('username')">User</mbsc-input>
-        <mbsc-input formControlName="password" type="password" [error]="f.password.touched && f.password.dirty && f.password.invalid" [errorMessage]="getError('password')">Password</mbsc-input>
-        <mbsc-button type="submit" [disabled]="loginForm.invalid || loading">Login</mbsc-button>
-        <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+        <div class="md-logo"></div>
+        <div class="mbsc-form-group-inset">
+            <mbsc-input formControlName="username" [error]="f.username.touched && f.username.dirty && f.username.invalid" [errorMessage]="getError('username')">User</mbsc-input>
+            <mbsc-input formControlName="password" type="password" password-toggle="true" icon="none" icon-align="right" [error]="f.password.touched && f.password.dirty && f.password.invalid" [errorMessage]="getError('password')">Password</mbsc-input>
+            <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+        </div>
+        <div class="mbsc-form-group-inset mbsc-padding">
+            <mbsc-button block type="submit" [disabled]="loginForm.invalid || loading">Login</mbsc-button>
+        </div>
     </form>
 </mbsc-form>
